<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_powered_by_google">Powered by Google</string>
    <string name="app_name">TMA-1</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="add_page">Add Page</string>
    <string name="delete_page">Delete Page</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove">Remove</string>
    <string name="action_reset">Reset</string>
    <string name="action_set">Setting</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="action_Rate">Rate</string>
    <string name="busy">Busy</string>
    <string name="gauge">Monitor</string>
    <string name="map">Map</string>
    <string name="log">Log</string>
    <string name="system_set">System Set</string>
    <string name="manual">Manual</string>
    <string name="t_fhss">T-FHSS</string>
    <string name="fasstest">FASSTest</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="lablogData">Log Data：</string>
    <string name="btnOpen">Open</string>
    <string name="btnClear">Clear</string>
    <string name="btnConfirm">Confirm</string>
    <string name="write">Write Log</string>
    <string name="stop">Stop</string>
    <string name="set">Set</string>
    <string name="servo">Servo</string>
    <string name="optics">Optics</string>
    <string name="magnet">Magnet</string>
    <string name="labDevice">Device</string>
    <string name="labTitle">Title</string>
    <string name="labSensor">Sensor</string>
    <string name="labType">Type</string>
    <string name="labUnit">Unit</string>
    <string name="labSlot">Slot</string>
    <string name="labRange1">Fin</string>
    <string name="labRange2">GearRatio</string>
    <string name="labReceiverTile">Receiver</string>
    <string name="labVoltageTile">Voltage</string>
    <string name="labTemperatureTile">Temperature</string>
    <string name="labRPMTile">RPM</string>
    <string name="labAltitudeTile">Altitude</string>
    <string name="labAltitudeTile2">Altitude：</string>
    <string name="labVariometerTile">Variometer：</string>
    <string name="labDistanceTile">Distance：</string>
    <string name="labSpeedTile">Speed：</string>
    <string name="labGPSTile">GPS</string>
    <string name="labGPSLocusTile">GPSLocus</string>
    <string name="labAltitude2">Alt.：</string>
    <string name="labVariometer2">Var.：</string>
    <string name="labPressure2">Pre.：</string>
    <string name="labDistance2">Dis.：</string>
    <string name="labAltitudeUnit">Altitude Unit</string>
    <string name="labVariometerUnit">Variometer Unit</string>
    <string name="labSpeedUnit">Speed Unit</string>
    <string name="labMaxValue">Max Value</string>
    <string name="labRPMBasicUnit">X 1000 rpm</string>
    <string name="labAlertEnable">Alert Enable</string>
    <string name="labAlertMax">Alert Max</string>
    <string name="labAlertMin">Alert Min</string>
    <string name="labRx">Rx.</string>
    <string name="labShowBattery">Battery</string>
    <string name="labShowExtBattery">Ext. Battery</string>
    <string name="labBattery">Battery</string>
    <string name="labRxMaxValue">Rx. Max Value</string>
    <string name="labRxAlertEnable">Rx. Alert Enable</string>
    <string name="labRxAlertMax">Rx. Alert Max</string>
    <string name="labRxAlertMin">Rx. Alert Min</string>
    <string name="labExt">Ext.</string>
    <string name="labExtBattery">Ext.Battery</string>
    <string name="labExtMaxValue">Ext. Max Value</string>
    <string name="labExtAlertEnable">Ext. Alert Enable</string>
    <string name="labExtAlertMax">Ext. Alert Max</string>
    <string name="labExtAlertMin">Ext. Alert Min</string>
    <string name="labSensor2">Sensor：　</string>
    <string name="radioBtnAltitude">Altitude</string>
    <string name="radioBtnVariometer">Variometer</string>
    <string name="radioBtnPressure">Pressure</string>
    <string name="radioBtnSpeed">Speed</string>
    <string name="radioBtnRx">Rx_Voltage</string>
    <string name="radioBtnExt">Ext_Voltage</string>
    <string name="btnBack">Back</string>
    <string name="btnReset">Reset</string>
    <string name="labPageTitle">Page Title：</string>
    <string name="labPageTitleHint">Please Enter Page Title！</string>
    <string name="labSetErrorTitle">Result</string>
    <string name="labSetError">System Set Error! Please Confirm Link Or Restart Link Device!</string>
    <string name="labSetError2">Set Error! Please Confirm !</string>
    <string name="labSetSuccessTitle">Success</string>
    <string name="labSetSuccess">System Set Success!</string>
    <string name="labSetSuccess2">Set Success!</string>
    <string name="logRxVoltage">Rx. Voltage [V]</string>
    <string name="logExtVoltage">Ext. Voltage [V]</string>
    <string name="logTemperature">Temperature [℃]</string>
    <string name="logRPM">RPM x1000[rpm]</string>
    <string name="logSpeed">Speed [km/h]</string>
    <string name="logVariometer">Variometer [m/s]</string>
    <string name="logPressure">Pressure [hPa]</string>
    <string name="logAltitude">Altitude [m]</string>
    <string name="labScreenMode">Screen Mode</string>
    <string name="labAlertSound">Alert Sound Set</string>
    <string name="radioMode1">Background-color (black)</string>
    <string name="radioMode2">Background-color (white)</string>
    <string name="btnAlertSound">Alert Sound</string>
    <string name="labDefault">Restore Defaults</string>
    <string name="btnDefault">Defaults</string>
    <string name="labServoValue">Servo Value</string>
</resources>
