<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:id="@+id/textView1" android:background="#c0c0c0" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labScreenMode"/>
        <TableLayout android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:id="@+id/radioMode1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/radioMode1"/>
                <RadioButton android:id="@+id/radioMode2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/radioMode2"/>
            </RadioGroup>
        </TableLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.01" android:onClick="alertSountSet">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:id="@+id/textView1" android:background="#c0c0c0" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labAlertSound"/>
        <Button android:id="@+id/btnAlertSound" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btnAlertSound" android:onClick="alertSountSet"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.27">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textStyle="bold" android:id="@+id/textView1" android:background="#c0c0c0" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/labDefault"/>
        <Button android:id="@+id/btnDefault" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btnDefault" android:onClick="DefaultSet"/>
    </LinearLayout>
</LinearLayout>
