<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/lblSettingData" android:layout_width="0dp" android:layout_height="wrap_content" android:text="" android:layout_weight="1"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/lblBusy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/busy"/>
        <ImageView android:id="@+id/imgBusy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:src="@drawable/idle" android:contentDescription="@string/busy"/>
    </LinearLayout>
    <ImageView android:id="@+id/imgVolt" android:layout_width="match_parent" android:layout_height="0dp" android:src="@drawable/gauge2" android:scaleType="fitCenter" android:maxHeight="400dp" android:layout_weight="1" android:contentDescription="@string/busy"/>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.2"/>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2">
        <Button android:textSize="25sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/btn_Gauge" android:background="#ff8f19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200dp" android:minHeight="60dp" android:text="@string/gauge" android:onClick="btnGaugeClick"/>
        <Button android:textSize="25sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/btn_Map" android:background="#ff8f19" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:minWidth="200dp" android:minHeight="60dp" android:text="@string/map" android:onClick="btnMapClick"/>
        <Button android:textSize="25sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/btn_Log" android:background="#ff8f19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:minWidth="200dp" android:minHeight="60dp" android:text="@string/log" android:onClick="btnLogClick"/>
        <Button android:textSize="25sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/btn_SystemSet" android:background="#ff8f19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:minWidth="200dp" android:minHeight="60dp" android:text="@string/system_set" android:onClick="btnSystemSetClick"/>
        <Button android:textSize="25sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/btn_Manual" android:background="#ff8f19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:minWidth="200dp" android:minHeight="60dp" android:text="@string/manual" android:onClick="btnManual"/>
    </LinearLayout>
</LinearLayout>
